Adding code for jpa and database connection

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,12 @@
 #spring.security.user.name=admin
 #spring.security.user.password=password
 #spring.security.user.roles=ADMIN
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/site
+spring.datasource.username=postgres
+spring.datasource.password=root
+spring.jpa.show-sql=true
+
+spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
+
+spring.jpa.hibernate.ddl-auto=update
