Adding roles and exception

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,8 @@
 #spring.security.user.password=password
 #spring.security.user.roles=ADMIN
 
+logging.level.org.springframework.security=DEBUG
+
 spring.datasource.url=jdbc:postgresql://localhost:5432/site
 spring.datasource.username=postgres
 spring.datasource.password=root
